[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovstudio-activate"
version = "0.1.2"
description = "Activate and run paid Lovstudio skills locally. Decryption keys never touch disk."
requires-python = ">=3.9"
dependencies = [
  "cryptography>=42",
  "pyyaml>=6",
]

[project.scripts]
lovstudio-activate = "lovstudio_activate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lovstudio_activate"]
