[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovstudio"
version = "0.2.0"
description = "Lovstudio CLI — activate and run paid Lovstudio skills locally. Decryption keys never touch disk."
requires-python = ">=3.9"
dependencies = [
  "cryptography>=42",
  "pyyaml>=6",
]

[project.scripts]
lovstudio = "lovstudio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lovstudio"]
